legal pages + cargoboard blog article

--- a/index.html
+++ b/index.html
@@ -3,9 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Transportschaden? Versicherung zahlt nicht? Wir kaufen Ihre Forderung. Sofort Geld, null Risiko, null Aufwand.">
-    <meta name="keywords" content="Transportschaden, Forderung verkaufen, Cargoboard Schaden, Spedition Schaden, Transportversicherung zahlt nicht, Fracht Schaden Entschädigung">
-    <title>Transportschaden? Wir kaufen Ihre Forderung. | transportschaden-geld.de</title>
+    <title>Transportschaden? Wir kaufen Ihre Forderung. Sofort Geld. | transportschaden-geld.de</title>
+    <meta name="description" content="Transportschaden? Sendung verloren? Versicherung zahlt nicht? Wir kaufen Ihre Forderung gegen Spediteure und Frachtplattformen. Sofort Geld, null Risiko. Spezialisiert auf Cargoboard, iloxx, JUMiNGO, Saloodo.">
+    <meta name="keywords" content="Transportschaden, Transportschaden Forderung verkaufen, Cargoboard Schaden, Cargoboard Erfahrung, Spedition Schaden Entschädigung, Transportversicherung zahlt nicht, Fracht Schaden, Palette beschädigt, Sendung verloren Spedition, Haftungshöchstbetrag Spedition, iloxx Schaden, JUMiNGO Schaden, Saloodo Schaden, Transportschaden was tun, Spedition zahlt nicht">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Monti Technology GmbH">
+    <meta name="geo.region" content="DE-NI">
+    <meta name="geo.placename" content="Badbergen">
+    <link rel="canonical" href="https://transportschaden-geld.de/">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://transportschaden-geld.de/">
+    <meta property="og:title" content="Transportschaden? Wir kaufen Ihre Forderung. Sofort Geld.">
+    <meta property="og:description" content="Ware beschädigt oder verloren? Versicherung zahlt nicht? Wir kaufen Ihre Forderung gegen Spediteure und Frachtplattformen. Kein Risiko, kein Aufwand.">
+    <meta property="og:locale" content="de_DE">
+    <meta property="og:site_name" content="transportschaden-geld.de">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Transportschaden? Wir kaufen Ihre Forderung.">
+    <meta name="twitter:description" content="Sendung verloren oder beschädigt? Wir kaufen Ihre Forderung. Sofort Geld, null Risiko.">
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Monti Technology GmbH",
+        "url": "https://transportschaden-geld.de",
+        "description": "Ankauf von Transportschadensforderungen. Wir kaufen Ihre Forderung gegen Spediteure und Frachtplattformen.",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Im Roggesch 10c",
+            "addressLocality": "Badbergen",
+            "postalCode": "49635",
+            "addressCountry": "DE"
+        },
+        "email": "info@montitech.de",
+        "founder": {
+            "@type": "Person",
+            "name": "Thomas Kiene"
+        }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "Was bedeutet Forderung kaufen?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Wir kaufen Ihnen Ihren Anspruch gegen die Spedition oder Frachtplattform ab. Sie bekommen sofort einen Kaufpreis, unabhängig davon, ob wir die Forderung am Ende durchsetzen können. Das Risiko liegt komplett bei uns."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Was kostet mich das?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Nichts. Sie erhalten einen Kaufpreis für Ihre Forderung. Es gibt keine versteckten Kosten, keine Gebühren, keine Erfolgsbeteiligung."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Meine Versicherung hat abgelehnt. Ist der Fall trotzdem relevant?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Ja, oft sogar besonders. Die Transportversicherung und die gesetzliche Frachtführerhaftung sind zwei verschiedene Dinge. Auch wenn die Versicherung ablehnt, kann der Frachtführer trotzdem voll haften."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Schadet das meiner Geschäftsbeziehung mit dem Spediteur?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Nein. Nach dem Kauf gehört die Forderung uns, nicht mehr Ihnen. Wir treten als eigenständiger Forderungsinhaber auf. Ihre Geschäftsbeziehung bleibt unberührt."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Ich habe nur den Haftungshöchstbetrag angeboten bekommen. Lohnt sich das trotzdem?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Oft ja. Die gesetzlichen Haftungsgrenzen können unter bestimmten Voraussetzungen vollständig entfallen, zum Beispiel bei grobem Organisationsverschulden des Frachtführers. In solchen Fällen haftet die Gegenseite für den vollen Warenwert."
+                }
+            }
+        ]
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
@@ -614,6 +703,115 @@
             opacity: 0.6;
         }
 
+        /* --- CONSENT CHECKBOX --- */
+        .consent-group {
+            margin-top: 0.5rem;
+        }
+
+        .checkbox-label {
+            display: flex;
+            align-items: flex-start;
+            gap: 0.6rem;
+            cursor: pointer;
+            font-size: 0.82rem;
+            color: var(--text-dim);
+            text-transform: none;
+            letter-spacing: 0;
+            line-height: 1.5;
+        }
+
+        .checkbox-label input[type="checkbox"] {
+            width: 18px;
+            height: 18px;
+            margin-top: 2px;
+            flex-shrink: 0;
+            accent-color: var(--accent);
+            cursor: pointer;
+        }
+
+        .checkbox-label a {
+            color: var(--accent);
+            text-decoration: underline;
+        }
+
+        /* --- COOKIE BANNER --- */
+        .cookie-banner {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 200;
+            background: var(--bg-card);
+            border-top: 1px solid var(--border);
+            padding: 1.2rem 2rem;
+            transform: translateY(0);
+            transition: transform 0.4s ease;
+        }
+
+        .cookie-banner.hidden {
+            transform: translateY(100%);
+            pointer-events: none;
+        }
+
+        .cookie-inner {
+            max-width: 900px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1.5rem;
+        }
+
+        .cookie-inner p {
+            font-size: 0.82rem;
+            color: var(--text-dim);
+            line-height: 1.5;
+            margin: 0;
+        }
+
+        .cookie-inner a {
+            color: var(--accent);
+            text-decoration: underline;
+        }
+
+        .cookie-buttons {
+            display: flex;
+            gap: 0.8rem;
+            flex-shrink: 0;
+        }
+
+        .cookie-btn {
+            padding: 0.5rem 1.2rem;
+            border-radius: 6px;
+            font-family: 'DM Sans', sans-serif;
+            font-size: 0.82rem;
+            font-weight: 600;
+            cursor: pointer;
+            border: none;
+            transition: all 0.2s;
+            text-decoration: none;
+        }
+
+        .cookie-btn.accept {
+            background: var(--accent);
+            color: var(--bg);
+        }
+
+        .cookie-btn.accept:hover {
+            background: #27AE60;
+        }
+
+        .cookie-btn.info {
+            background: transparent;
+            border: 1px solid var(--border);
+            color: var(--text-dim);
+        }
+
+        .cookie-btn.info:hover {
+            border-color: var(--accent);
+            color: var(--accent);
+        }
+
         /* --- RESPONSIVE --- */
         @media (max-width: 768px) {
             nav {
@@ -659,6 +857,11 @@
 
             .footer-top {
                 flex-direction: column;
+            }
+
+            .cookie-inner {
+                flex-direction: column;
+                text-align: center;
             }
         }
 
@@ -846,6 +1049,13 @@
                 <textarea id="beschreibung" name="Beschreibung" placeholder="Kurze Beschreibung: Was wurde versendet, was wurde beschädigt/verloren, wann ist es passiert?" required></textarea>
             </div>
 
+            <div class="form-group full consent-group">
+                <label class="checkbox-label">
+                    <input type="checkbox" id="consent" name="Einwilligung" value="Ja" required>
+                    <span>Ich habe die <a href="/datenschutz.html" target="_blank">Datenschutzerklärung</a> gelesen und bin mit der Verarbeitung meiner Daten einverstanden.</span>
+                </label>
+            </div>
+
             <button type="submit" class="submit-btn">Forderung absenden →</button>
 
             <p class="form-note">Ihre Daten werden vertraulich behandelt. Wir melden uns innerhalb von 48 Stunden mit einer Einschätzung.</p>
@@ -924,8 +1134,9 @@
             E-Mail: <a href="mailto:info@montitech.de" style="color: var(--accent); text-decoration: none;">info@montitech.de</a>
         </div>
         <div class="legal-links">
-            <a href="#">Datenschutz</a>
-            <a href="#">Impressum</a>
+            <a href="/datenschutz.html">Datenschutz</a>
+            <a href="/impressum.html">Impressum</a>
+            <a href="/agb.html">AGB</a>
         </div>
         <p class="copyright">© 2026 Monti Technology GmbH. Alle Rechte vorbehalten.</p>
     </div>
@@ -959,12 +1170,32 @@
     const form = document.getElementById('claim-form');
     const successMsg = document.getElementById('success');
 
+    // Cookie Banner
+    function acceptCookies() {
+        document.getElementById('cookie-banner').classList.add('hidden');
+        localStorage.setItem('cookies-accepted', 'true');
+    }
+    if (localStorage.getItem('cookies-accepted') === 'true') {
+        document.getElementById('cookie-banner').classList.add('hidden');
+    }
+
     // Check if redirected back after submission
     if (window.location.hash === '#success') {
         form.style.display = 'none';
         successMsg.style.display = 'block';
     }
 </script>
+
+<!-- COOKIE BANNER -->
+<div class="cookie-banner" id="cookie-banner">
+    <div class="cookie-inner">
+        <p>Diese Website verwendet nur technisch notwendige Cookies. Keine Tracking- oder Werbe-Cookies. Durch die Nutzung stimmen Sie unserer <a href="/datenschutz.html">Datenschutzerklärung</a> zu.</p>
+        <div class="cookie-buttons">
+            <button class="cookie-btn accept" onclick="acceptCookies()">Verstanden</button>
+            <a href="/datenschutz.html" class="cookie-btn info">Mehr erfahren</a>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
