Blog: Cargoboard AGB Analyse Teil 2

--- a/index.html
+++ b/index.html
@@ -1212,6 +1212,12 @@
             <p>5 konkrete Fehler und Irreführungen auf der offiziellen Cargoboard Help-Seite. Was Ihnen verschwiegen wird und was Ihnen wirklich zusteht.</p>
             <span class="blog-card-link">Artikel lesen →</span>
         </a>
+        <a href="/blog/cargoboard-agb-analyse.html" class="blog-card" style="margin-top: 1rem;">
+            <div class="blog-card-badge">AGB-Analyse</div>
+            <h3>Cargoboard AGB: 7 Klauseln, die Ihre Rechte bei Transportschäden einschränken</h3>
+            <p>Teil 2: Haftung auf Subunternehmer abgewälzt, § 435 HGB verschwiegen, Warnhinweise unverbindlich. Was in den AGB steht und was davon wirksam ist.</p>
+            <span class="blog-card-link">Artikel lesen →</span>
+        </a>
         <a href="/blog/cargo-international-erfahrung-agb-analyse.html" class="blog-card" style="margin-top: 1rem;">
             <div class="blog-card-badge">AGB-Analyse</div>
             <h3>Cargo International: 6 problematische Klauseln in den AGB der Online-Spedition</h3>
