--- a/index.html
+++ b/index.html
@@ -986,6 +986,32 @@
             color: var(--text-mid);
             font-size: 1rem;
         }
+        /* --- DISCLAIMER --- */
+        .disclaimer {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem 2rem 0;
+        }
+        .disclaimer-inner {
+            background: rgba(243, 156, 18, 0.06);
+            border: 1px solid rgba(243, 156, 18, 0.2);
+            border-radius: 10px;
+            padding: 1.5rem 2rem;
+        }
+        .disclaimer-title {
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            letter-spacing: 0.12em;
+            color: #F39C12;
+            font-weight: 700;
+            margin-bottom: 0.6rem;
+        }
+        .disclaimer-inner p {
+            font-size: 0.82rem;
+            color: var(--text-dim);
+            line-height: 1.7;
+            margin: 0;
+        }
     </style>
 </head>
 <body>
@@ -1003,7 +1029,7 @@
 <section class="hero">
     <div class="badge">Spezialisiert auf Transportschäden</div>
     <h1>Ware beschädigt?<br>Sendung verloren?<br><em>Wir zahlen.</em></h1>
-    <p class="hero-sub">Wir kaufen Ihre Transportschadensforderung. Sie bekommen sofort Geld. Kein Anwalt, kein Prozess, kein Risiko. Wir übernehmen alles.</p>
+    <p class="hero-sub">Wir kaufen Ihre Transportschadensforderung. Sie bekommen sofort Geld. Kein Anwalt, kein Prozess, kein Risiko. Wir prüfen jeden Fall — kostenlos und unverbindlich.</p>
     <a href="#formular" class="hero-cta">
         Jetzt Forderung melden
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
@@ -1027,7 +1053,7 @@
         </div>
         <div class="proof-item">
             <div class="proof-number">100 %</div>
-            <div class="proof-label">Wir übernehmen alles</div>
+            <div class="proof-label">Wir prüfen alles</div>
         </div>
     </div>
 </div>
@@ -1218,6 +1244,12 @@
             <p>Teil 2: Haftung auf Subunternehmer abgewälzt, § 435 HGB verschwiegen, Warnhinweise unverbindlich. Was in den AGB steht und was davon wirksam ist.</p>
             <span class="blog-card-link">Artikel lesen →</span>
         </a>
+        <a href="/blog/pamyra-erfahrung-transportschaden.html" class="blog-card" style="margin-top: 1rem;">
+            <div class="blog-card-badge">Ratgeber-Analyse</div>
+            <h3>Pamyra: 5 Fehler auf der Transportschaden-Seite der Frachtplattform</h3>
+            <p>Haftung als Schuldfrage definiert, 3 statt 7 Tage Meldefrist, ADSp statt HGB. Was Pamyra falsch erklärt und was es Sie kosten kann.</p>
+            <span class="blog-card-link">Artikel lesen →</span>
+        </a>
         <a href="/blog/cargo-international-erfahrung-agb-analyse.html" class="blog-card" style="margin-top: 1rem;">
             <div class="blog-card-badge">AGB-Analyse</div>
             <h3>Cargo International: 6 problematische Klauseln in den AGB der Online-Spedition</h3>
@@ -1226,6 +1258,14 @@
         </a>
     </div>
 </section>
+
+<!-- DISCLAIMER -->
+<div class="disclaimer">
+    <div class="disclaimer-inner">
+        <div class="disclaimer-title">⚠ Wichtiger Hinweis</div>
+        <p>Die Inhalte dieser Website dienen ausschließlich der allgemeinen Information und stellen keine Rechtsberatung dar. Die dargestellten rechtlichen Einschätzungen ersetzen nicht die individuelle Beratung durch einen zugelassenen Rechtsanwalt. Jeder Schadensfall ist anders gelagert — besprechen Sie Ihren konkreten Fall mit einem auf Transport- und Speditionsrecht spezialisierten Anwalt, bevor Sie rechtliche Schritte einleiten oder Fristen verstreichen lassen. Die Monti Technology GmbH übernimmt keine Haftung für Entscheidungen, die auf Grundlage der hier veröffentlichten Inhalte getroffen werden.</p>
+    </div>
+</div>
 
 <!-- FOOTER -->
 <footer>
@@ -1236,7 +1276,7 @@
         </div>
         <div class="footer-contact">
             <p>
-                <a href="mailto:info@montitech.de">info@montitech.de</a><br>
+                <a href="/cdn-cgi/l/email-protection#2f464149406f4240415b465b4a4c47014b4a"><span class="__cf_email__" data-cfemail="7910171f16391416170d100d1c1a11571d1c">[email&#160;protected]</span></a><br>
                 <a href="#formular">Forderung melden →</a>
             </p>
         </div>
@@ -1247,7 +1287,7 @@
             Monti Technology GmbH<br>
             Geschäftsführer: Thomas Kiene<br>
             Im Roggesch 10c, 49635 Badbergen<br>
-            E-Mail: <a href="mailto:info@montitech.de" style="color: var(--accent); text-decoration: none;">info@montitech.de</a>
+            E-Mail: <a href="/cdn-cgi/l/email-protection#6e070008012e0301001a071a0b0d06400a0b" style="color: var(--accent); text-decoration: none;"><span class="__cf_email__" data-cfemail="5930373f36193436372d302d3c3a31773d3c">[email&#160;protected]</span></a>
         </div>
         <div class="legal-links">
             <a href="/impressum.html">Impressum</a>
@@ -1259,7 +1299,7 @@
     </div>
 </footer>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     // FAQ Accordion
     document.querySelectorAll('.faq-question').forEach(q => {
         q.addEventListener('click', () => {
@@ -1306,13 +1346,4 @@
 <!-- COOKIE BANNER -->
 <div class="cookie-banner" id="cookie-banner">
     <div class="cookie-inner">
-        <p>Diese Website verwendet nur technisch notwendige Cookies. Keine Tracking- oder Werbe-Cookies. Durch die Nutzung stimmen Sie unserer <a href="/datenschutz.html">Datenschutzerklärung</a> zu.</p>
-        <div class="cookie-buttons">
-            <button class="cookie-btn accept" onclick="acceptCookies()">Verstanden</button>
-            <a href="/datenschutz.html" class="cookie-btn info">Mehr erfahren</a>
-        </div>
-    </div>
-</div>
-
-</body>
-</html>
+        <p>Diese Website verwendet nur technisch notwendige Cookies. Keine Tracking- oder Werbe-
