Blog: Cargoboard AGB Analyse Teil 2

--- a/index.html
+++ b/index.html
@@ -1232,10 +1232,16 @@
     <div class="blog-teaser-inner">
         <div class="section-label">Blog</div>
         <h2>Ihre Rechte bei Transportschäden</h2>
-        <a href="/blog/cargoboard-erfahrung-transportschaden.html" class="blog-card">
+        <a href="/blog/transportschaden-rechte-ratgeber.html" class="blog-card">
+            <div class="blog-card-badge">Ratgeber</div>
+            <h3>Transportschaden: Ihre Rechte als Versender — Was Ihnen wirklich zusteht</h3>
+            <p>Der vollständige Ratgeber. Obhutshaftung, Beweislast, Fristen, § 435 HGB, ADSp vs. HGB, Versicherung. Alles, was die Plattformen Ihnen nicht sagen.</p>
+            <span class="blog-card-link">Ratgeber lesen →</span>
+        </a>
+        <a href="/blog/cargoboard-erfahrung-transportschaden.html" class="blog-card" style="margin-top: 1rem;">
             <div class="blog-card-badge">Analyse</div>
             <h3>Cargoboard Erfahrung: Wie die Frachtplattform Kunden bei Transportschäden systematisch benachteiligt</h3>
-            <p>5 konkrete Fehler und Irreführungen auf der offiziellen Cargoboard Help-Seite. Was Ihnen verschwiegen wird und was Ihnen wirklich zusteht.</p>
+            <p>8 konkrete Fehler auf Help-Center und Schadensabwicklungs-Seite. Was Ihnen verschwiegen wird und was Ihnen wirklich zusteht.</p>
             <span class="blog-card-link">Artikel lesen →</span>
         </a>
         <a href="/blog/cargoboard-agb-analyse.html" class="blog-card" style="margin-top: 1rem;">
