Blog: Cargoboard AGB Analyse Teil 2

--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@
         <a href="/blog/cargoboard-erfahrung-transportschaden.html" class="blog-card" style="margin-top: 1rem;">
             <div class="blog-card-badge">Analyse</div>
             <h3>Cargoboard Erfahrung: Wie die Frachtplattform Kunden bei Transportschäden systematisch benachteiligt</h3>
-            <p>8 konkrete Fehler auf Help-Center und Schadensabwicklungs-Seite. Was Ihnen verschwiegen wird und was Ihnen wirklich zusteht.</p>
+            <p>11 konkrete Fehler auf drei Cargoboard-Seiten. Was Ihnen verschwiegen wird und was Ihnen wirklich zusteht.</p>
             <span class="blog-card-link">Artikel lesen →</span>
         </a>
         <a href="/blog/cargoboard-agb-analyse.html" class="blog-card" style="margin-top: 1rem;">
