Blog: Cargoboard AGB Analyse Teil 2

--- a/index.html
+++ b/index.html
@@ -1151,6 +1151,7 @@
                     <option value="DHL Freight">DHL Freight</option>
                     <option value="DB Schenker">DB Schenker</option>
                     <option value="Cargo International">Cargo International</option>
+                    <option value="Jumingo">Jumingo</option>
                     <option value="Andere">Andere Spedition</option>
                 </select>
             </div>
@@ -1260,6 +1261,12 @@
             <div class="blog-card-badge">AGB-Analyse</div>
             <h3>Cargo International: 6 problematische Klauseln in den AGB der Online-Spedition</h3>
             <p>Zwingende CMR-Rechte ausgeschlossen, Warnhinweise ignoriert, Lieferfristen pauschal abgelehnt. Was in den AGB steht und was davon wirksam ist.</p>
+            <span class="blog-card-link">Artikel lesen →</span>
+        </a>
+        <a href="/blog/jumingo-erfahrung-agb-analyse.html" class="blog-card" style="margin-top: 1rem;">
+            <div class="blog-card-badge">AGB-Analyse</div>
+            <h3>JUMiNGO AGB: 8 Klauseln und zwei Rechtsordnungen, die Ihre Rechte einschränken</h3>
+            <p>Haftung sinkt auf 2 SDR/kg durch Subunternehmer-Klausel, Beweislast umgedreht, 250-€-Paketdeckel. Zwei Gesellschaften, ein Kunde.</p>
             <span class="blog-card-link">Artikel lesen →</span>
         </a>
     </div>
