Komplett-Update: Koch Artikel, Meine Einschätzung, Disclaimer, E-Mail entfernt

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -86,7 +86,7 @@
         Monti Technology GmbH<br>
         Geschäftsführer: Thomas Kiene<br>
         Im Roggesch 10c, 49635 Badbergen<br>
-        E-Mail: <a href="mailto:info@montitech.de">info@montitech.de</a>
+        E-Mail: <a href="/cdn-cgi/l/email-protection#dfb6b1b9b09fb2b0b1abb6abbabcb7f1bbba"><span class="__cf_email__" data-cfemail="5b32353d341b3634352f322f3e3833753f3e">[email&#160;protected]</span></a>
     </p>
 
     <h2>2. Übersicht der Verarbeitungen</h2>
@@ -193,10 +193,4 @@
     </p>
 
     <div class="footer-legal-links">
-        <a href="/impressum.html">Impressum</a>
-        <a href="/agb.html">AGB</a>
-        <a href="/">Startseite</a>
-    </div>
-</div>
-</body>
-</html>
+        <a href="/impr
