--- a/impressum.html
+++ b/impressum.html
@@ -80,11 +80,11 @@
     </p>
 
     <h2>Vertreten durch</h2>
-    <p>Geschäftsführer: Thomas Kiene</p>
+    <p>Liquidator: Thomas Kiene</p>
 
     <h2>Kontakt</h2>
     <p>
-        E-Mail: <a href="mailto:info@montitech.de">info@montitech.de</a>
+        E-Mail: <a href="/cdn-cgi/l/email-protection#4c25222a230c212322382538292f24622829"><span class="__cf_email__" data-cfemail="620b0c040d220f0d0c160b1607010a4c0607">[email&#160;protected]</span></a>
     </p>
 
     <h2>Registereintrag</h2>
@@ -135,10 +135,4 @@
     </p>
 
     <div class="footer-legal-links">
-        <a href="/datenschutz.html">Datenschutz</a>
-        <a href="/agb.html">AGB</a>
-        <a href="/">Startseite</a>
-    </div>
-</div>
-</body>
-</html>
+        <a href="/datensch
