--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             "postalCode": "49635",
             "addressCountry": "DE"
         },
-        "email": "info@montitech.de",
         "founder": {
             "@type": "Person",
             "name": "Thomas Kiene"
@@ -1151,7 +1150,7 @@
                     <option value="DHL Freight">DHL Freight</option>
                     <option value="DB Schenker">DB Schenker</option>
                     <option value="Cargo International">Cargo International</option>
-                    <option value="Jumingo">Jumingo</option>
+                    <option value="Koch International">Koch International</option>
                     <option value="Andere">Andere Spedition</option>
                 </select>
             </div>
@@ -1269,6 +1268,12 @@
             <p>Haftung sinkt auf 2 SDR/kg durch Subunternehmer-Klausel, Beweislast umgedreht, 250-€-Paketdeckel. Zwei Gesellschaften, ein Kunde.</p>
             <span class="blog-card-link">Artikel lesen →</span>
         </a>
+        <a href="/blog/koch-international-erfahrung-agb-analyse.html" class="blog-card" style="margin-top: 1rem;">
+            <div class="blog-card-badge">AGB-Analyse</div>
+            <h3>Koch International: Wer versichert, verliert seinen Anspruch gegen die Spedition</h3>
+            <p>6 AGB-Klauseln analysiert. Versicherung ersetzt Haftung, ADSp 2017, § 435 HGB unerwähnt. Das Muster kennen wir.</p>
+            <span class="blog-card-link">Artikel lesen →</span>
+        </a>
     </div>
 </section>
 
@@ -1289,7 +1294,6 @@
         </div>
         <div class="footer-contact">
             <p>
-                <a href="/cdn-cgi/l/email-protection#2f464149406f4240415b465b4a4c47014b4a"><span class="__cf_email__" data-cfemail="7910171f16391416170d100d1c1a11571d1c">[email&#160;protected]</span></a><br>
                 <a href="#formular">Forderung melden →</a>
             </p>
         </div>
@@ -1298,9 +1302,8 @@
         <div class="impressum">
             <strong>Impressum</strong><br>
             Monti Technology GmbH<br>
-            Geschäftsführer: Thomas Kiene<br>
-            Im Roggesch 10c, 49635 Badbergen<br>
-            E-Mail: <a href="/cdn-cgi/l/email-protection#6e070008012e0301001a071a0b0d06400a0b" style="color: var(--accent); text-decoration: none;"><span class="__cf_email__" data-cfemail="5930373f36193436372d302d3c3a31773d3c">[email&#160;protected]</span></a>
+            Liquidator: Thomas Kiene<br>
+            Im Roggesch 10c, 49635 Badbergen
         </div>
         <div class="legal-links">
             <a href="/impressum.html">Impressum</a>
