Logo: Leerzeichen entfernt, Text-Wrapper

--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
         }
 
         .logo span:not(.logo-mark) {
+            color: var(--text);
+        }
+
+        .logo-text span {
             color: var(--accent);
         }
 
@@ -1251,7 +1255,7 @@
 
 <!-- NAV -->
 <nav>
-    <div class="logo"><div class="logo-mark"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg></div>transportschaden<span>-geld</span>.de</div>
+    <div class="logo"><div class="logo-mark"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg></div><span class="logo-text">transportschaden<span>-geld</span>.de</span></div>
     <div class="nav-links">
         <a href="/blog/" class="nav-link">Blog</a>
         <a href="/ueber-uns.html" class="nav-link">Über uns</a>
