Blog-Link fix, DHL Card unter Überschrift

--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,7 @@
 <nav>
     <div class="logo"><div class="logo-mark"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg></div><span class="logo-text">transportschaden<span>-geld</span>.de</span></div>
     <div class="nav-links">
-        <a href="/blog/" class="nav-link">Blog</a>
+        <a href="/blog/index.html" class="nav-link">Blog</a>
         <a href="/ueber-uns.html" class="nav-link">Über uns</a>
         <a href="#formular" class="nav-cta">Forderung melden →</a>
     </div>
@@ -1472,15 +1472,15 @@
 <!-- BLOG TEASER -->
 <section class="blog-teaser">
     <div class="blog-teaser-inner">
+        <div class="section-label">Blog</div>
+        <h2>Ihre Rechte bei Transportschäden</h2>
         <a href="/blog/dhl-paket-erfahrung-agb-analyse.html" class="blog-card">
             <div class="blog-card-badge">AGB-Analyse</div>
             <h3>DHL Paket: Was DHL besser macht als alle anderen. Die fairsten AGB im Test</h3>
             <p>§ 435 HGB korrekt, 500 € ohne Haftungsgrenze, Geldforderungen abtretbar. DHL zeigt, dass faire AGB möglich sind.</p>
             <span class="blog-card-link">Artikel lesen →</span>
         </a>
-        <div class="section-label">Blog</div>
-        <h2>Ihre Rechte bei Transportschäden</h2>
-        <a href="/blog/transportschaden-rechte-ratgeber.html" class="blog-card">
+        <a href="/blog/transportschaden-rechte-ratgeber.html" class="blog-card" style="margin-top: 1rem;">
             <div class="blog-card-badge">Ratgeber</div>
             <h3>Transportschaden: Ihre Rechte als Versender. Was Ihnen wirklich zusteht</h3>
             <p>Der vollständige Ratgeber. Obhutshaftung, Beweislast, Fristen, § 435 HGB, ADSp vs. HGB, Versicherung. Alles, was die Plattformen Ihnen nicht sagen.</p>
@@ -1607,7 +1607,7 @@
             <a href="/datenschutz.html">Datenschutz</a>
             <a href="/agb.html">AGB</a>
             <a href="/ueber-uns.html">Über uns</a>
-            <a href="/blog/">Blog</a>
+            <a href="/blog/index.html">Blog</a>
         </div>
         <p class="copyright">© 2026 Monti Technology GmbH. Alle Rechte vorbehalten.</p>
     </div>
