--- a/agb.html
+++ b/agb.html
@@ -36,8 +36,9 @@
             backdrop-filter: blur(20px);
             border-bottom: 1px solid var(--border);
         }
-        .logo { font-weight: 700; font-size: 1.1rem; color: var(--text); text-decoration: none; }
-        .logo span { color: var(--accent); }
+        .logo { font-weight: 700; font-size: 1.1rem; color: var(--text); text-decoration: none; display: flex; align-items: center; gap: 0.5rem; }
+        .logo-mark { width: 30px; height: 30px; background: linear-gradient(135deg, #2ECC71, #1a9c54); border-radius: 8px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; color: #0C0F0E; }
+        .logo span:not(.logo-mark) { color: inherit; } .logo-text span { color: #2ECC71; }
         nav a.back { color: var(--accent); text-decoration: none; font-size: 0.85rem; font-weight: 500; }
         nav a.back:hover { text-decoration: underline; }
         .content {
@@ -70,7 +71,7 @@
 </head>
 <body>
 <nav>
-    <a href="/" class="logo">transportschaden<span>-geld</span>.de</a>
+    <a href="/" class="logo"><span class="logo-mark"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg></span><span class="logo-text">transportschaden<span>-geld</span>.de</span></a>
     <a href="/" class="back">← Zurück zur Startseite</a>
 </nav>
 <div class="content">
@@ -101,13 +102,13 @@
 
     <h2>§ 3 Prüfung und Kaufangebot</h2>
     <p>
-        (1) Nach Einreichung einer Forderung über das Kontaktformular prüft die Käuferin den Sachverhalt. Die Käuferin bemüht sich, dem Verkäufer innerhalb von 48 Stunden nach vollständiger Einreichung aller erforderlichen Unterlagen eine Einschätzung zukommen zu lassen.
+        (1) Nach Einreichung einer Forderung über das Kontaktformular bewertet die Käuferin, ob ein Forderungskauf in Betracht kommt. Die Käuferin bemüht sich, dem Verkäufer innerhalb von 48 Stunden nach vollständiger Einreichung aller erforderlichen Unterlagen eine Rückmeldung zukommen zu lassen.
     </p>
     <p>
-        (2) Im Rahmen der Prüfung kann die Käuferin den Verkäufer um zusätzliche Unterlagen und Informationen bitten, insbesondere Kaufbelege, Rechnungen, Frachtbriefe, Schadensfotos, Korrespondenz mit dem Frachtführer oder Versicherer.
+        (2) Im Rahmen der Bewertung kann die Käuferin den Verkäufer um zusätzliche Unterlagen und Informationen bitten, insbesondere Kaufbelege, Rechnungen, Frachtbriefe, Schadensfotos, Korrespondenz mit dem Frachtführer oder Versicherer.
     </p>
     <p>
-        (3) Die Prüfung und die Einschätzung sind für den Verkäufer kostenlos und unverbindlich.
+        (3) Für die Bewertung und die Rückmeldung entstehen dem Verkäufer keine Kosten. Ein Anspruch auf ein Kaufangebot besteht nicht.
     </p>
 
     <h2>§ 4 Forderungsabtretung</h2>
