--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
 <section class="hero">
     <div class="badge">Spezialisiert auf Transportschäden</div>
     <h1>Ware beschädigt?<br>Sendung verloren?<br><em>Wir zahlen.</em></h1>
-    <p class="hero-sub">Wir kaufen Ihre Transportschadensforderung. Sie bekommen sofort Geld. Kein Anwalt, kein Prozess, kein Risiko. Wir prüfen jeden Fall, kostenlos und unverbindlich.</p>
+    <p class="hero-sub">Wir kaufen Ihre Transportschadensforderung. Sie bekommen sofort Geld. Kein Anwalt, kein Prozess, kein Risiko.</p>
     <a href="#formular" class="hero-cta">
         Jetzt Forderung melden
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
@@ -1291,7 +1291,7 @@
         </div>
         <div class="proof-item">
             <div class="proof-number">100 %</div>
-            <div class="proof-label">Wir prüfen alles</div>
+            <div class="proof-label">Jeder Fall wird geprüft</div>
         </div>
     </div>
 </div>
@@ -1309,7 +1309,7 @@
         <div class="step">
             <div class="step-num">02</div>
             <h3>Angebot erhalten</h3>
-            <p>Wir prüfen Ihren Fall und machen Ihnen innerhalb von 48 Stunden ein konkretes Kaufangebot für Ihre Forderung.</p>
+            <p>Wir bewerten Ihren Fall und machen Ihnen innerhalb von 48 Stunden ein konkretes Kaufangebot für Ihre Forderung.</p>
         </div>
         <div class="step">
             <div class="step-num">03</div>
@@ -1393,6 +1393,10 @@
                     <option value="LetMeShip">LetMeShip</option>
                     <option value="Cargolo">Cargolo</option>
                     <option value="DHL">DHL</option>
+                    <option value="DPD">DPD</option>
+                    <option value="UPS">UPS</option>
+                    <option value="Hermes">Hermes</option>
+                    <option value="GLS">GLS</option>
                     <option value="Andere">Andere Spedition</option>
                 </select>
             </div>
@@ -1421,7 +1425,7 @@
 
         <div class="success-msg" id="success">
             <h3>Erfolgreich gesendet ✓</h3>
-            <p>Vielen Dank! Wir prüfen Ihren Fall und melden uns innerhalb von 48 Stunden bei Ihnen.</p>
+            <p>Vielen Dank! Wir melden uns innerhalb von 48 Stunden bei Ihnen mit einem Kaufangebot oder einer Rückmeldung.</p>
         </div>
     </div>
 </section>
@@ -1474,6 +1478,12 @@
     <div class="blog-teaser-inner">
         <div class="section-label">Blog</div>
         <h2>Ihre Rechte bei Transportschäden</h2>
+        <a href="/blog/paketdienst-erstattung-zu-niedrig.html" class="blog-card">
+            <div class="blog-card-badge">Ratgeber</div>
+            <h3>DHL, DPD, UPS: Erstattung zu niedrig? Was Ihnen wirklich zusteht</h3>
+            <p>Paket verloren, aber nur 500 € bekommen? Warum die Erstattung fast immer zu niedrig ist und wie Sie den vollen Warenwert bekommen.</p>
+            <span class="blog-card-link">Artikel lesen →</span>
+        </a>
         <a href="/blog/dhl-paket-erfahrung-agb-analyse.html" class="blog-card">
             <div class="blog-card-badge">AGB-Analyse</div>
             <h3>DHL Paket: Was DHL besser macht als alle anderen. Die fairsten AGB im Test</h3>
